[package]
name = "ds18b20"
version = "0.1.1"
authors = ["Nathan Fox <fuchsnj@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/fuchsnj/ds18b20"
keywords = ["onewire", "embedded-hal-driver", "ds18b20", "temperature", "sensor"]
readme = "README.md"
categories = ["embedded", "hardware-support", "no-std"]
description = """
A Rust DS18B20 temperature sensor driver for [embedded-hal](https://github.com/rust-embedded/embedded-hal)
"""

[dependencies]
esp-one-wire-bus = { git = "https://github.com/Zovra/esp-one-wire-bus.git" }
esp-hal = {version="0.16.1"}


[features]
esp32 = ["esp-hal/esp32","esp-one-wire-bus/esp32"]

esp32c2 = ["esp-hal/esp32c2","esp-one-wire-bus/esp32c2"]

esp32c3 = ["esp-hal/esp32c3","esp-one-wire-bus/esp32c3"]

esp32c6 = ["esp-hal/esp32c6","esp-one-wire-bus/esp32c6"]

esp32h2 = ["esp-hal/esp32h2","esp-one-wire-bus/esp32h2"]

esp32p4 = ["esp-hal/esp32p4","esp-one-wire-bus/esp32p4"]

esp32s2 = ["esp-hal/esp32s2","esp-one-wire-bus/esp32s2"]

esp32s3 = ["esp-hal/esp32s3","esp-one-wire-bus/esp32s3"]